fix paging ordering; openrightsgroup/blocked-org-uk#341

--- a/BlockedFrontend/templates/cms/legal-block-errors.html
+++ b/BlockedFrontend/templates/cms/legal-block-errors.html
@@ -112,7 +112,7 @@ of sites incorrectly blocked
 
 {% endfor %}
 </table>
-{{ paging.page_list('.legal_errors', page, pagecount) }} 
+{{ paging.page_list('.legal_errors', page, pagecount, sort=request.args.get('sort','url'), o=request.args.get('o','a')  ) }} 
 
 {% endblock %}
 
