--- a/BlockedFrontend/templates/blocked-uk/BasicPage.page.html
+++ b/BlockedFrontend/templates/blocked-uk/BasicPage.page.html
@@ -54,16 +54,28 @@ banner_text_block(bool): show banner text block, default true
     <div class="topstrip2">
       <div class="container">
         <div class="row">
-          <div class="col-md-3" style="padding-top: 1.5em"><span style="font-size: 150%; ">Support the project</span></div>  
-          <div class="col-md-9">
+          <div class="col-md-3" style="padding-top: 1.5em"><span style="font-size: 150%; ">Support Blocked!</span></div>  
+          <div class="col-md-9" style="text-align: right">
             <p>You can join the Open Rights Group or <a href="https://www.openrightsgroup.org/donate">donate</a> to   
             <a href="https://www.blocked.org.uk/support">support the project</a>.</p>
 
-            <div>With your help, we can correct mistakes caused by overblocking and improve transparency about filtering in the UK.</div>
+            <div>
+                With your help, we can correct mistakes caused by overblocking and improve transparency about filtering in the UK.
+                We need to raise £5,000 to continue this work so please support the project today!
+            </div>
+            <div >
+                <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+                    <input type="hidden" name="cmd" value="_s-xclick">
+                    <input type="hidden" name="hosted_button_id" value="NPU6HTUCX53QQ">
+                    <input type="submit" class="text_donate" value="Donate">
+                    <!-- <img alt="" border="0" src="https://www.paypalobjects.com/en_GB/i/scr/pixel.gif" width="1" height="1"> -->
+                </form>
+            </div>
           </div>
         </div>
       </div>
     </div>
+
     <div class="container">
 
     <div class="row menurow">
