--- a/BlockedFrontend/templates/admin/courtorders_view.html
+++ b/BlockedFrontend/templates/admin/courtorders_view.html
@@ -73,9 +73,10 @@
                     <table class="table">
                         <tr>
                             <th style="width: 5%"></th>
-                            <th style="width: 50%">URL</th>
-                            <th style="width: 25%">Whois Expiry</th>
-                            <th style="width: 20%"></th>
+                            <th style="width: 40%">URL</th>
+                            <th style="width: 20%">Whois Expiry</th>
+                            <th style="width: 20%">Status</th>
+                            <th style="width: 15%"></th>
                         </tr>
                     {% for site in grpsites %}
                         <tr>
@@ -84,6 +85,7 @@
                             </td>
                             <td><a href="{{site.url}}" target="_blank">{{site.url}}</a></td>
                             <td>{{site.whois_expiry|fmdate}}</td>
+                            <td>{{site.reason }}</td>
                             <td style="text-align: right">
                             
                             <a href="{{ url_for('.courtorders_site_flag',id=site.id) }}" 
