add flag status to URL listing; openrightsgroup/blocked-org-uk#343

--- a/BlockedFrontend/templates/admin/courtorders_view.html
+++ b/BlockedFrontend/templates/admin/courtorders_view.html
@@ -85,7 +85,7 @@
                             </td>
                             <td><a href="{{site.url}}" target="_blank">{{site.url}}</a></td>
                             <td>{{site.whois_expiry|fmdate}}</td>
-                            <td>{{site.reason }}</td>
+                            <td>{{site.reason | null | replace('_',' ')  }}</td>
                             <td style="text-align: right">
                             
                             <a href="{{ url_for('.courtorders_site_flag',id=site.id) }}" 
