--- a/BlockedFrontend/templates/blocked-uk/BasicPage.page.html
+++ b/BlockedFrontend/templates/blocked-uk/BasicPage.page.html
@@ -59,20 +59,29 @@ banner_text_block(bool): show banner text block, default true
     <div class="topstrip2">
       <div class="container">
         <div class="row">
-          <div class="col-md-3" style="padding-top: 1.5em"><span style="font-size: 150%; ">We need £5,000</span></div>  
-          <div class="col-md-9" style="text-align: right">
+          <div class="col-md-5" style=""><span style="font-size: 150%; font-family: 'Roboto',sans-serif">
+                  <strong><em>Please help us</em></strong> make UK court orders
+                  <strong><em>transparent and accountable</em></strong>
+          </span></div>  
+          <div class="col-md-5" style="">
 
             <div>
-                We need £5,000 to obtain all the court documents and make blocking and its mistakes fully transparent. Please donate today.
+                <div style="font-size: 200%; text-align: center; margin-bottom: 0.25em">We need £5,000</div>
+                <div class="progress" style="margin-bottom: 0px">
+                    <div class="progress-bar" role="progressbar" style="width: 5%" aria-valuenow="5" aria-valuemax="100" aria-valuemin="0" /></div>
+                </div>
+                <div style="">£0
+                    <span style="float: right">£5,000</span>
+                </div>
             </div>
-            <div >
+          </div>
+          <div class="col-md-2" style="vertical-align: bottom; text-align: right">
                 <form action="https://www.paypal.com/cgi-bin/webscr" class="" method="post" target="_top">
                     <input type="hidden" name="cmd" value="_s-xclick">
                     <input type="hidden" name="hosted_button_id" value="NPU6HTUCX53QQ">
                     <input type="submit" class="btn btn-primary btn-lg" value="Donate">
                     <!-- <img alt="" border="0" src="https://www.paypalobjects.com/en_GB/i/scr/pixel.gif" width="1" height="1"> -->
                 </form>
-            </div>
           </div>
         </div>
       </div>
