--- a/BlockedFrontend/templates/cms/legal-blocks.html
+++ b/BlockedFrontend/templates/cms/legal-blocks.html
@@ -7,6 +7,7 @@
 
 {%block page_menu%}
 <div><a href="{{ url_for('.legal_errors') }}">Legal block errors</a></div>
+<div><a href="{{ url_for('.legal_orders') }}">Court orders index</a></div>
 {% endblock %}
 
 {% block col1_row1 %}
