add more restricted statuses openrightsgroup/blocked-org-uk#345 openrightsgroup/blocked-org-uk#327

--- a/BlockedFrontend/templates/admin/admin_urls.html
+++ b/BlockedFrontend/templates/admin/admin_urls.html
@@ -38,6 +38,8 @@
         ('duplicate','duplicate'),
         ('invalid','invalid'),
         ('disallowed-by-robots-txt', 'disallowed-by-robots-txt'),
+        ('restricted-malware', 'restricted-malware'),
+        ('restricted-by-admin', 'restricted-by-admin'),
         ('ok', 'ok'),
         ])
         }}
