--- a/BlockedFrontend/templates/blocked-uk/BasicPage.page.html
+++ b/BlockedFrontend/templates/blocked-uk/BasicPage.page.html
@@ -20,6 +20,17 @@ banner_text_block(bool): show banner text block, default true
     <title>{{ titletag if titletag is defined else pagetitle }}</title>
 
     {% block og %}
+<meta property="og:site_name" content="Report mobile and Internet Service Providers blocking sites" />
+<meta property="og:type" content="article" />
+<meta property="article:author" content="https://www.openrightsgroup.org" />
+<meta property="og:locale" content="en_GB" />
+<meta property="og:title" name="twitter:title" content="{{ pagetitle }}" />
+<meta name="twitter:site" content="" />
+<meta name="twitter:site:id" content="" />
+<meta property="og:url" name="twitter:url" content="{{request.url}}" />
+<meta property="og:description" name="twitter:description" content="{{ og_description|default('Report incorrectly blocked sites on UK ISP and mobile networks') }}" />
+<meta name="twitter:card" content="summary" />
+<meta name="twitter:image" property="og:image" content="https://www.blocked.org.uk/assets/images/blocked/socialmedia/blocked_result.jpg" />
     {% endblock %}
 
     <!-- Bootstrap -->
