--- a/BlockedFrontend/templates/admin/admin.page.html
+++ b/BlockedFrontend/templates/admin/admin.page.html
@@ -26,7 +26,13 @@
         <ul class="nav navbar-nav">
           <li class=""><a href="/control">Home</a></li>
           <li class=""><a href="{{ url_for('.users') }}">Users</a></li>
-          <li class=""><a href="{{ url_for('.urls') }}">URLs</a></li>
+          <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown">URLs <span class="caret"></span></a></a>
+              <ul class="dropdown-menu">
+                  <li><a href="{{ url_for('.urls') }}">URL admin</a></li>
+                  <li><a href="{{ url_for('.urls_upload') }}">URL upload</a></li>
+              </ul>
+          </li>
           <li class=""><a href="{{ url_for('.ispreports') }}">ISP Reports</a></li>
           <li class=""><a href="{{ url_for('.tests') }}">Test Schedule</a></li>
           <li class="dropdown">
