Change column title to services targeted openrightsgroup/blocked-org-uk#301

--- a/BlockedFrontend/templates/cms/legal-block-orders.html
+++ b/BlockedFrontend/templates/cms/legal-block-orders.html
@@ -12,7 +12,7 @@
     <tr>
     <th style="width: 50%">Judgment/Citation</th>
     <th>Date</th>
-    <th class="num">Sites listed</th>
+    <th class="num">Services Targeted</th>
     <th class="num">Blocks Detected</th>
     </tr>
     {% for judgment in judgments %}
