Show targetted services in judgment listing  openrightsgroup/blocked-org-uk#301

--- a/BlockedFrontend/templates/cms/legal-block-orders.html
+++ b/BlockedFrontend/templates/cms/legal-block-orders.html
@@ -22,7 +22,7 @@
             <div><em>{{judgment.citation|null}}</em></div>
         </td>
         <td>{{judgment.date|fmdate}}</td>
-        <td class="num">{{judgment.site_count}}</td>
+        <td class="num">{{judgment.services_targeted or '-'}}</td>
         <td class="num">{{judgment.block_count}}</td>
     </tr>
     
