--- a/BlockedFrontend/templates/unblock/unblock.html
+++ b/BlockedFrontend/templates/unblock/unblock.html
@@ -58,6 +58,9 @@
 <div class="form-group">
 <input type="submit" class="btn btn-primary" value="Continue" />
 </div>
+<p>
+<a href="https://www.openrightsgroup.org/privacy/">Privacy policy</a>
+</p>
 
 </form>
 
