add nofollow attribute to unblock/feedback links

--- a/BlockedFrontend/templates/category/results.part.html
+++ b/BlockedFrontend/templates/category/results.part.html
@@ -10,7 +10,7 @@
   <td>
   <a class="" href="{{ url_for('site.site', url=item.url) }}">View site report</a>
   {% if item.last_reported is none %}
-  <a class="btn btn-default" href="{{ url_for('unblock.unblock', url=item.url) }}">Request Unblock</a>
+  <a class="btn btn-default" rel="nofollow" href="{{ url_for('unblock.unblock', url=item.url) }}">Request Unblock</a>
   {% else %}
   <a class="btn btn-primary btn-disabled" disabled rel="nofollow">Unblock Requested</a>
   {% endif %}
