--- a/BlockedFrontend/templates/cms/index.html
+++ b/BlockedFrontend/templates/cms/index.html
@@ -48,7 +48,7 @@
 
   <div class="buttonlist">
   <div class="">
-    <a href="{{url_for('unblock.unblock', url=site.url)}}" class="btn  btn-primary">Request unblock</a>
+    <a href="{{url_for('unblock.unblock', url=site.url)}}" rel="nofollow" class="btn  btn-primary">Request unblock</a>
   </div>
 
   <div class="">
