--- a/BlockedFrontend/templates/unblock/unblock2.html
+++ b/BlockedFrontend/templates/unblock/unblock2.html
@@ -49,7 +49,7 @@
 </div>
 
 <h2>About you</h2>
-  <p>Logged in as: {{ session.name }} ({{session.email}}) <a class="" href="{{ url_for('.unblock', url=url, update=1) }}">Change name/email</a></p>
+  <p>Logged in as: {{ session.name }} ({{session.email}}) <a class="" rel="nofollow" href="{{ url_for('.unblock', url=url, update=1) }}">Change name/email</a></p>
 
 <h2>About the site</h2>
 <div class="form-group">
