--- a/BlockedFrontend/templates/site/site.html
+++ b/BlockedFrontend/templates/site/site.html
@@ -224,7 +224,7 @@ Your feedback was successfully submitted.
 <div> <!-- actions -->
   {% if config.MODULE_UNBLOCK %}
 {% if can_unblock == true or live %}
-  <a id="unblockbtn" href="{{ url_for('unblock.unblock', url=url) }}" class="btn btn-primary">Request unblock</a>
+  <a id="unblockbtn" href="{{ url_for('unblock.unblock', url=url) }}" rel="nofollow" class="btn btn-primary">Request unblock</a>
 {% elif can_unblock == false %}
   <a class="btn btn-primary btn-disabled" disabled rel="nofollow">
 {%- if prev_unblock_type == 'unblock' -%}
@@ -254,7 +254,7 @@ Your feedback was successfully submitted.
       {% if report_types %}
       <h4>This site has been flagged</h4>
       <p>This site has been flagged as: <strong>{{ report_types | sort | join(", ") }}</strong></p>
-        <div><a href="{{ url_for('unblock.feedback', url=url) }}">Tell us more about this site</a></div>
+        <div><a rel="nofollow" href="{{ url_for('unblock.feedback', url=url) }}">Tell us more about this site</a></div>
       {% else %}
         <h4>This site has been submitted for unblocking</h4>
         <p>Reported on {{reports[0].created|fmtime}}</p>
@@ -268,7 +268,7 @@ Your feedback was successfully submitted.
     {% else %}
     <h4>Tell us about this site</h4>
     <p>For example: is the link dead, or is the domain being squatted?
-      <div><a href="{{ url_for('unblock.feedback', url=url) }}">Please let us know</a></div>
+      <div><a rel="nofollow" href="{{ url_for('unblock.feedback', url=url) }}">Please let us know</a></div>
     </p>
     {% endif %}
     {% endif %}
