style for page title on site page openrightsgroup/blocked-org-uk#356

--- a/BlockedFrontend/static/theme.css
+++ b/BlockedFrontend/static/theme.css
@@ -22,7 +22,7 @@ h2 {
 }
 
 
-h3, .pctdesc, .pagerole {
+h3, .pctdesc, .pagerole, .page_title {
   font-family: 'Poppins', sans-serif;
   font-weight: 600;
   font-size: 24px;
