--- a/BlockedFrontend/templates/chunks.part.html
+++ b/BlockedFrontend/templates/chunks.part.html
@@ -76,6 +76,7 @@
 
 
 {% macro main_menu() %}
+{# TODO: move to CMS #}}
 <a class="{{ 'active' if request.path == '/' else ''}}" href="/">Home</a>
 {% if config.MODULE_CATEGORY %}
 <a class="{{ 'active' if request.path.startswith( ('/blocked-sites','/site','/check','/unblock','/thanks')) else ''}}" href="/sites">Blocked Sites</a>
@@ -84,7 +85,9 @@
 {{ menu_link("Reported Sites", '/reported-sites') }}
 {% endif %}
 {# menu_link("Court Order Blocks", '/legal-blocks') #}
+{% if config.SITE_THEME != 'blocked-eu' %}
 {{ menu_link("Your Stories", '/personal-stories') }}
+{% endif %}
 
 {{ menu_link_eq("Statistics", '/stats') }}
 {{ menu_link("About", '/about') }}
